2021-04-06  Allen D. Ball  <ball@hcf.dev>

	* Change Renderer.render(Object) interface to
	render(Object,Object...) to accept alternate representations.

	* src/main/java/ganymede/server/renderer/ThymeleafRenderer.java,
	src/main/java/ganymede/shell/magic/Thymeleaf.java:
	Combined Renederer implementations into single ThymeleafRenderer.

2021-04-05  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/notebook/NotebookFunctions.java:
	Added asJson(Object) function.

	* Refactored Renderer hierarchy.  Replaced @ForType with @ForClass
	and @ForClassName (the latter used to identify classes that may
	not be available).  Moved RendererMap key calculation to
	RendererMap private methods and do not attempt to load Renderer
	providers if the @ForClassName target is not available.

	* src/main/java/ganymede/util/ServiceProviderMap.java:
	Added getClassLoader() and reload(Predicate<Class<?>>) methods.

2021-04-01  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/dependency/Resolver.java;
	Use addToClasspath(Artifact...) in
	resolve(Shell,PrintStream,PrintStream,POM).

2021-03-31  Allen D. Ball  <ball@hcf.dev>

	* Refactored Thymeleaf Magic as subclass of
	AbstractScriptEngineMagic.

2021-03-30  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/jsr223/ThymeleafScriptEngine.java:
	Initial writing (exposed factory internal class).

	* src/main/java/ganymede/notebook/Notebook.java:
	Added static bootstrap() method to generate JShell bootstrap
	code.

2021-03-29  Allen D. Ball  <ball@hcf.dev>

	* Added ganymede.jsr223 package with Thymeleaf ScriptEngineFactory
	implementation.

2021-03-28  Allen D. Ball  <ball@hcf.dev>

	* Refactor Magic methods to accept NotebookContext parameter
	instead of ScriptContext.

	* src/main/java/ganymede/notebook/NotebookContext.java:
	Added static update(JShell) method to update NotebookContext in
	the JShell instance.

2021-03-26  Allen D. Ball  <ball@hcf.dev>

	* Added LICENSE and copyright protection notices.
