@@ -1,0 +1,46 @@
+<!--/*
+  ##########################################################################
+  Ganymede
+  $Id$
+  $HeadURL$
+  %%
+  Copyright (C) 2021 Allen D. Ball
+  %%
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+  ##########################################################################
+  */-->
+<div>
+  <style scoped>
+    .bindings thead th {
+      text-align: center;
+    }
+
+    .bindings tbody tr th {
+      vertical-align: top;
+    }
+
+    .bindings tbody td {
+      text-align: left;
+    }
+  </style>
+  <table border="1" class="bindings">
+    <thead>
+      <tr><th th:text="Name"/><th th:text="Type"/><th th:text="Value"/></tr>
+    </thead>
+    <tbody>
+      <tr th:each="entry : ${bindings.entrySet()}">
+        <td th:text="${entry.key}"/><td th:text="${types.get(entry.key)}"/><td th:text="${entry.value}"/>
+      </tr>
+    </tbody>
+  </table>
+</div>
