@@ -1,5 +1,7 @@
 2021-04-06  Allen D. Ball  <ball@hcf.dev>
 
+	* Changed Java Magic to display bindings if no code is specified.
+
 	* Change Renderer.render(Object) interface to
 	render(Object,Object...) to accept alternate representations.
 
